[package]
name = "rnaapi"
version = "0.1.0"
edition = "2024"
description = "NetActuate API client library"
license = "MIT"

[dependencies]
dotenv = "0.15.0"
hickory-resolver = "*"
reqwest = { version = "0.12.23", features = ["blocking"]}
reqwest-hickory-resolver = "0.2.0"
serde_json = "1.0.145"
tokio = {version = "1.47.1", features = ["full"]}

[lints.rust]
unused_imports = "allow"
