[package]
name = "rnaapi"
version = "0.1.1"
edition = "2024"
description = "NetActuate API client library"
license = "MIT"

[dependencies]
dotenv = "0.15.0"
hickory-resolver = "0.25.2"
reqwest = { version = "0.12.23", features = ["blocking"]}
reqwest-hickory-resolver = "0.2.0"
clap = { version = "4.5.49", features = ["derive"] }
crossterm = "0.29.0"
serde = { version = "1.0.228", features = ["derive"]}
serde_json = "1.0.145"
tokio = {version = "1.47.1", features = ["full"]}

[lints.rust]
unused_imports = "allow"
