[package]
name = "rnaapi"
version = "0.2.0"
edition = "2024"
description = "NetActuate API client library"
license = "MIT"

[dependencies]
hickory-resolver = "0.25.2"
reqwest = { version = "0.12.23", features = ["blocking", "json"]}
reqwest-hickory-resolver = "0.2.0"
clap = { version = "4.5.49", features = ["derive"] }
crossterm = "0.29.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = {version = "1.47.1", features = ["full"]}
axum = "0.8.6"
lazy_static = "1.5.0"
dotenvy = "0.15.7"

[lints.rust]
unused_imports = "allow"
