[package]
name = "rnatui"
version = "1.0.0"
edition = "2024"
description = "NetActuate API CLI client using rnaapi rust library"
license = "MIT"

[dependencies]
clap = "4.5.51"
reqwest = "0.12.28"
rnaapi = { path = "../rnaapi_lib/", version = "2.0.1" }
tokio = { version = "1.48.0", features = ["full"] }
anyhow = "1.0.100"
## unused until we do ratatui
# crossterm = "0.28.1"
# ratatui = "0.29.0"
# color-eyre = "0.6.3"
# serde = { version = "1.0.228", features = ["derive", "default"] }
# serde_json = "1.0.145"
