[package]
name = "rnatui"
version.workspace = true
license.workspace = true
edition.workspace = true
description.workspace = true

[dependencies]
clap = "4.5.51"
reqwest = "0.12.28"
rnaapi = { path = "../rnaapi_lib/", version = "2.0.7" }
tokio = { version = "1.48.0", features = ["full"] }
anyhow = "1.0.100"
clap_complete = "4.5"
chrono = "0.4.43"
## unused until we do ratatui
# crossterm = "0.28.1"
# ratatui = "0.29.0"
# color-eyre = "0.6.3"
# serde = { version = "1.0.228", features = ["derive", "default"] }
# serde_json = "1.0.145"
